--- a/index.html
+++ b/index.html
@@ -325,17 +325,17 @@
                                 </div>
                                 
                                   <section id="faq" class="faq section-padding bg-dark text-white">
-                    <div class="container-fluid">
-                        <div class="container">
+                    <div class="container-fluid bg-dark">
+                        <div class="container bg-dark">
                             <div class="heading text-center">
-                                <h6 class="sub-title animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">FAQ</h6>
-                                <h2 class="title animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">Frequently Asked <strong>Questions</strong></h2>
-                                <div class="separator animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
+                                <h6 class="sub-title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.2s">FAQ</h6>
+                                <h2 class="title animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.3s">Frequently Asked <strong>Questions</strong></h2>
+                                <div class="separator animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
                                     <span class="large"></span>
                                     <span class="medium"></span>
                                     <span class="small"></span>
                                 </div>
-                                <p class="content-desc animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
+                                <p class="content-desc animated text-white" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
                                     Originally the term "FAQ" referred to the Frequently Asked Question itself, and the
                                     <br />compilation of questions and answers was known as a "FAQ list" or some similar expression.
                                 </p>
@@ -348,7 +348,7 @@
                                             <div id="general-accordion" class="collapse-icon accordion-icon-rotate">
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.1s">
-                                                    <div class="card-header" id="headingOne">
+                                                    <div class="card-header btn-dark text-white" id="headingOne">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                                                 <span class="icon"></span>
@@ -364,7 +364,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-                                                    <div class="card-header" id="headingTwo">
+                                                    <div class="card-header btn-dark text-white" id="headingTwo">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                                                 <span class="icon"></span>
@@ -381,7 +381,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-                                                    <div class="card-header" id="headingThree">
+                                                    <div class="card-header btn-dark text-white" id="headingThree">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                                                 <span class="icon"></span>
@@ -397,7 +397,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingFour">
+                                                    <div class="card-header btn-dark text-white" id="headingFour">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -413,7 +413,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingFive">
+                                                    <div class="card-header btn-dark text-white" id="headingFive">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -430,10 +430,10 @@
 
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingSix">
+                                                    <div class="card-header btn-dark text-white" id="headingSix">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class="icon bg-green"></span>
                                                                 What happens if i do not Recycle ?
                                                             </a>
                                                         </h5>
@@ -447,7 +447,7 @@
 
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingSeven">
+                                                    <div class="card-header btn-dark text-white" id="headingSeven">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -465,7 +465,7 @@
 
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingEight">
+                                                    <div class="card-header btn-dark text-white" id="headingEight">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -484,7 +484,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingNine">
+                                                    <div class="card-header btn-dark text-white" id="headingNine">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -500,7 +500,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingTen">
+                                                    <div class="card-header btn-dark text-white" id="headingTen">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -520,7 +520,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingEleven">
+                                                    <div class="card-header btn-dark text-white" id="headingEleven">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
@@ -536,7 +536,7 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header" id="headingtweleve">
+                                                    <div class="card-header btn-dark text-white" id="headingtweleve">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseFour">
                                                                 <span class="icon"></span>
