--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAVANA</title>
     
-    <link rel="shortcut icon" type="image/x-icon" href="https://bullrun3.github.io/signup/assets/img/bullrun3.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://fastbullv1.github.io/signup/assets/img/bullrun3.png">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700" rel="stylesheet">
     <!--Font icons-->
@@ -348,10 +348,10 @@
                                             <div id="general-accordion" class="collapse-icon accordion-icon-rotate">
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.1s">
-                                                    <div class="card-header btn-dark text-white" id="headingOne">
+                                                    <div class="card-header bg-dark text-white" id="headingOne">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 What Happen with My Registration Fees ?
                                                             </a>
                                                         </h5>
@@ -364,10 +364,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
-                                                    <div class="card-header btn-dark text-white" id="headingTwo">
+                                                    <div class="card-header bg-dark text-white" id="headingTwo">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 What is affiliate program ?
                                                             </a>
                                                         </h5>
@@ -381,10 +381,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">
-                                                    <div class="card-header btn-dark text-white" id="headingThree">
+                                                    <div class="card-header bg-dark text-white" id="headingThree">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 What is Global One Line Autopool ?
                                                             </a>
                                                         </h5>
@@ -397,10 +397,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingFour">
+                                                    <div class="card-header bg-dark text-white" id="headingFour">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 How many Autopools are in the system ?
                                                             </a>
                                                         </h5>
@@ -413,10 +413,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingFive">
+                                                    <div class="card-header bg-dark text-white" id="headingFive">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 Can I enter the Super Autopool Directly ?
                                                             </a>
                                                         </h5>
@@ -430,10 +430,10 @@
 
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingSix">
+                                                    <div class="card-header bg-dark text-white" id="headingSix">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon bg-green"></span>
+                                                                <span class=""></span>
                                                                 What happens if i do not Recycle ?
                                                             </a>
                                                         </h5>
@@ -447,10 +447,10 @@
 
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingSeven">
+                                                    <div class="card-header bg-dark text-white" id="headingSeven">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 What is Maximum Profit after Super Autopool ?
                                                             </a>
                                                         </h5>
@@ -465,10 +465,10 @@
 
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingEight">
+                                                    <div class="card-header bg-dark text-white" id="headingEight">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 Autopool Entry is mandatory ?
                                                             </a>
                                                         </h5>
@@ -484,10 +484,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingNine">
+                                                    <div class="card-header bg-dark text-white" id="headingNine">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 Is my (ETH) Funds safe ?
                                                             </a>
                                                         </h5>
@@ -500,10 +500,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingTen">
+                                                    <div class="card-header bg-dark text-white" id="headingTen">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 Is it possible to earn Passively here at Havana Autopool ?
                                                             </a>
                                                         </h5>
@@ -520,10 +520,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingEleven">
+                                                    <div class="card-header bg-dark text-white" id="headingEleven">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 I don't have Referral link, can I register with Havana Autopool?
                                                             </a>
                                                         </h5>
@@ -536,10 +536,10 @@
                                                 </div>
 
                                                 <div class="card animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
-                                                    <div class="card-header btn-dark text-white" id="headingtweleve">
+                                                    <div class="card-header bg-dark text-white" id="headingtweleve">
                                                         <h5 class="mb-0">
                                                             <a class="btn-link collapsed" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseFour">
-                                                                <span class="icon"></span>
+                                                                <span class=""></span>
                                                                 My Super Autopool is complete and I received 0.3 ETH,what's next now ?
                                                             </a>
                                                         </h5>
