--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -854,11 +854,11 @@ $(document).ready(function () {
 
 <style>
     .pool1pay{
-        display: none
+        display: block
     }
 
     .pool1status {
-        display: none
+        display: block
     }
 </style>
 
