--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -839,7 +839,7 @@ $(document).ready(function () {
                         <p class="mb-5 text-white">Globally <strong>3</strong> people pays <br /> <strong>0.1</strong> ETH each</p>
                         <p class="mb-5 text-white">No Referral necessary</p>
                         <button type="button" class="btn btn-dark pool1pay text-white">Enter</button>
-                        <p class="pool1transaction btn btn-dark disabled text-white">Not Eligible</p>
+                        <p class="pool1transaction btn btn-dark disabled text-white">Re-Enter Pool</p>
                     </div>
                 </div>
             </div>
@@ -858,7 +858,7 @@ $(document).ready(function () {
     }
 
     .pool1status {
-        display: block
+        display: none
     }
 </style>
 
