--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -541,11 +541,8 @@ function checkPool1() {
 
             }
             else if (result[2]< 3) {
-                $('.pool1status').show();
-                $('.pool1status .card-status').addClass('bg-warning');
-                $('.pool1status .ribbon').addClass('text-warning').html('<span class="bg-warning">Active</span>');
-                $('.pool1transaction').html('Received No. of Payments ' + result[2]);
-                $('.currentautopoolno').html(1);
+                 $('.pool1pay').show();
+                $('.pool1transaction').hide();
             }
 
 
