--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -405,7 +405,7 @@ function DirectreferralCount() {
         }
     });
      
-}
+/}
 var count = 1;
 
 function InDirectreferralCount(address, level) {
@@ -541,8 +541,12 @@ function checkPool1() {
 
             }
             else if (result[2]< 3) {
-                 $('.pool1pay').show();
-                $('.pool1transaction').hide();
+                $('.pool1status').show();
+                $('.pool1status .card-status').addClass('bg-warning');
+                $('.pool1status .ribbon').addClass('text-warning').html('<span class="bg-warning">Active</span>');
+                $('.pool1transaction').html('Received No. of Payments ' + result[2]);
+                $('.currentautopoolno').html(1);
+
             }
 
 
