--- a/Home-Dashboard/index.html
+++ b/Home-Dashboard/index.html
@@ -532,7 +532,7 @@ function checkPool1() {
                 $('.pool1pay').show();
                 $('.pool1transaction').hide();
             }
-            else if (result[2] == 2) {
+            else if (result[2] == 3) {
                 $('.pool1status').show();
                 $('.pool1status .card-status').addClass('bg-success');
                 $('.pool1status .ribbon').addClass('text-success').html('<span class="bg-success">Completed</span>');
@@ -540,7 +540,7 @@ function checkPool1() {
 
 
             }
-            else if (result[2]< 2) {
+            else if (result[2]< 3) {
                 $('.pool1status').show();
                 $('.pool1status .card-status').addClass('bg-warning');
                 $('.pool1status .ribbon').addClass('text-warning').html('<span class="bg-warning">Active</span>');
@@ -569,7 +569,7 @@ $(document).ready(function () {
             myContractInstance1.methods.buyPool1().send({ from: account, value: 100000000000000000, gas: 500000 })
                 .on('transactionHash', function (hash) {
                 
-                    $('.pool1pay').show();
+                    $('.pool1pay').hide();
                     $('.pool1transaction').show();
                     $('.pool1transaction').html('<a href="https://etherscan.io/tx/' + hash + '">Track</a>');
               
